fixed some spacing

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -143,7 +143,7 @@ body,html{
 }
 
 #intro_name{
-    font-size: 40px;
+    font-size: 35px;
     font-family: 'Playfair Display SC', serif;
     /* background: -webkit-linear-gradient(#03001e, #7303c0, #f64f59, #fdeff9 ); */
     background-image: radial-gradient( circle farthest-corner at -4.5% 34.3%,  rgba(13,20,174,1) 0%, rgba(243,165,140,1) 90% );
@@ -198,8 +198,8 @@ body,html{
 }
 
 #spotify-album-cover{
-    height: 140px;
-    width: 140px;
+    height: 120px;
+    width: 120px;
     border-radius: 12px;
     box-shadow: 7px 7px 10px  #423d3d;
 }
@@ -215,7 +215,7 @@ body,html{
 .spotify-info-container{
   grid-column: 1;
   grid-row: 3;
-    width: 126px;
+  width: 180px;
 
 }
 
@@ -225,17 +225,17 @@ body,html{
 }
 
 #song_title{
-    /* font-size: 30px; */
+    font-size: 20px;
     font-weight: bold;
 }
 
 #song_artist{
-    font-size: 19px;
+    font-size: 18px;
 }
 
 .playing-status-container{
     grid-column: 1/3;
-    grid-row: 2/3;
+    grid-row: 4;
     display: flex;
     align-items: center;
     margin-bottom: 4px;
@@ -284,7 +284,12 @@ body,html{
   #projects{
     display: flex;
     flex-wrap: wrap;
+
     
+  }
+
+  #projects .project-item-span{
+    font-size: 13px;
   }
 
   #projects hr{
@@ -367,9 +372,9 @@ body,html{
   }
 
   .link-card-icon{
-    padding-top: 40px;
-    height: 170px;
-    width: 170px;
+    padding-top: 60px;
+    height: 140px;
+    width: 140px;
     color: white;
   }
 
@@ -419,9 +424,9 @@ body,html{
 
  #spotify-icon{
   padding-top: 0;
-  margin-top: 40px;
-  height: 160px;
-  width: 160px;
+  margin-top: 70px;
+  height: 130px;
+  width: 130px;
  }
 
 
@@ -436,14 +441,14 @@ body,html{
 #warzone{
   padding: 0;
   position: relative;
-  height: 250px;
-  width: 356px;
+  height: 210px;
+  width: 100%;
 }
 
 #warzone-img{
   border-radius: 32px;
-  height: 250px;
-  width: 356px;
+  height: 210px;
+  width: 100%;
   src: url('../images/wz-mobile.jpg');
   position: absolute;
   z-index: 1;
@@ -455,8 +460,8 @@ body,html{
 
 .wz-img-opacity{
   position: absolute;
-  height: 250px;
-  width: 356px;
+  height: 210px;
+  width: 100%;
   z-index: 2;
   background-color: rgba(0,0,0,0.5);
   border-radius: 32px;
